--- a/MyHostel_BackEnd/appsettings.json
+++ b/MyHostel_BackEnd/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MyDB": "server=(local); database=MyHostel; uid=sa; pwd=@hieu12345"
+    "MyDB": "server=(local); database=MyHostel; uid=sa; pwd=123456"
   },
   "Jwt": {
     "Key": "This is a secret key",
