--- a/MyHostel_Admin/appsettings.json
+++ b/MyHostel_Admin/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DBContext": "server=DESKTOP-3LM8VOV\\PHU; database=MyHostel;uid=sa; pwd=123456"
+    "DBContext": "server=(local); database=MyHostel;uid=sa; pwd=@hieu12345"
   }
 }
