Add Functions & Update database
- Update Get List Chat & get message
_ Update create message
- Add UpdateParticipantstatus & Delete message

--- a/MyHostel_BackEnd/appsettings.json
+++ b/MyHostel_BackEnd/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MyDB": "server=(local); database=MyHostel; uid=sa; pwd=@hieu12345"
+    "MyDB": "server=(local); database=MyHostel; uid=sa; pwd=quoc1910"
   },
   "Jwt": {
     "Key": "This is a secret key",
